# src-srpg-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  Trunk.toml  cclens.db  flake.nix  gpl-3.0.jp.txt  justfile  rust-toolchain.toml
.claude/: launch.json
SRC_20121125/: 0620変更点一覧.txt  AbilityData.cls  AbilityEffect.cls  AliasData.cls  AliasDataList.cls  BCVariable.bas  BattleConfigData.cls  (+64 more)
crates/src-core/: Cargo.toml
crates/src-core/src/: app.rs  audio.rs  battle_anim.rs  combat.rs  command_catalog.rs  command_menu.rs  condition.rs  db.rs  dialog.rs  entrypoint.rs  event_runtime.rs  feature.rs  flow.rs  item_slot.rs  lib.rs  modal.rs  movement.rs  necessary_skill.rs  pilot_instance.rs  script_overlay.rs  settings.rs  stage.rs  test_harness.rs  time_util.rs  turn.rs  unit_ability.rs  unit_instance.rs  unit_weapon.rs
crates/src-core/src/asset/: frx.rs  mod.rs
crates/src-core/src/data/: animation.rs  event.rs  item.rs  loader.rs  map.rs  mod.rs  pilot.rs  special_power.rs  terrain.rs  terrain_file.rs  unit.rs
crates/src-core/src/expression/: eval.rs  mod.rs  operator.rs  value_type.rs
crates/src-core/src/expression/functions/: math.rs  mod.rs  string.rs
crates/src-core/src/scene/: configuration.rs  intermission.rs  map_view.rs  mod.rs  pilot_list.rs  reaction.rs  title.rs  unit_detail.rs  unit_list.rs  weapon_select.rs
crates/src-core/src/ui/: gui.rs  gui_map.rs  gui_screen.rs  gui_status.rs  mod.rs
crates/src-core/tests/: arithmetic.rs  audio_commands.rs  battle_anim_lib.rs  call_return.rs  combat_stat_oracle.rs  command_condition.rs  command_function_args.rs  conditions.rs  continue_chain.rs  damage_heal.rs  expression_functions.rs  expression_more.rs  expression_oracle.rs  function_lhs.rs  function_oracle.rs  game_state_query.rs  info_function.rs  intermission.rs  item_equip.rs  like_operator.rs  list_function.rs  loops.rs  map_attack.rs  map_command.rs  math_function.rs  math_function_oracle.rs  mini_campaign.rs  misc_commands.rs  necessary_skill_gate.rs  nested_function.rs  onsen.rs  pilot_function.rs  sample_scenario_smoke.rs  save_then_chain.rs  scenarios.rs  scoped_label.rs  sort_command.rs  sparobo_load.rs  stage_progression.rs  stage_state_pipeline.rs  (+9 more)
crates/src-core/tests/fixtures/scenarios/: 01_confirm_yes.expected  02_confirm_no.eve  02_confirm_no.expected  03_menu_choice.eve  03_menu_choice.expected  03_menu_choice.steps  04_input_text.eve  04_input_text.expected  04_input_text.steps  05_for_loop_sum.eve  05_for_loop_sum.expected  06_goto_label.eve  06_goto_label.expected  07_wait_timer.eve  07_wait_timer.expected  07_wait_timer.steps  08_combat_damage.eve  08_combat_damage.expected  09_save_load_roundtrip.eve  09_save_load_roundtrip.expected  09_save_load_roundtrip.steps  10_audio_queue.eve  10_audio_queue.expected  11_implicit_call.eve  11_implicit_call.expected  12_assignment_sugar.eve  12_assignment_sugar.expected  13_nested_paren_expand.eve  13_nested_paren_expand.expected  14_mini_campaign.eve  14_mini_campaign.expected  14_mini_campaign.steps  15_continue_next_stage.eve  15_continue_next_stage.expected  16_destruction_autofire.eve  16_destruction_autofire.expected  17_victory_autofire.eve  17_victory_autofire.expected  18_total_annihilation_autofire.eve  18_total_annihilation_autofire.expected  (+10 more)
crates/src-web/: Cargo.toml  index.html
crates/src-web/assets/: sample_pilot.txt  sample_scenario.eve  sample_unit.txt
crates/src-web/src/: archive.rs  assets.rs  audio.rs  lib.rs  midi.rs  render.rs
tools/verify-archive/: Cargo.toml
tools/verify-archive/src/: main.rs
(+26 files in other folders)
