[workspace]
resolver = "2"
members = [
    "crates/src-core",
    "crates/src-web",
    "tools/verify-archive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/megurine/src-srpg-rs"
authors = ["src-srpg-rs contributors"]

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SRC `RegExp` / `RegExpReplace` 関数用。Unicode を有効にしないと `(?i)` や
# `case_insensitive(true)` がエラーになる (ASCII 入力でも regex の build 検証
# が落ちる)。`unicode-case` は必須、他の unicode-* もまとめて有効化する。
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }

# 元の SRC は VB6 製で描画コストは低い / Original SRC is VB6, low render cost.
# wasm のサイズ/速度のバランスを優先 / Balance wasm size and speed.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
